# fullstackarap

./: .dockerignore  .gitignore  README.md  bun.lockb  docker-compose.yml  package.json
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/api/: Cargo.toml  build.rs
backend/api/src/: grpc.rs  main.rs
frontend/: .dockerignore  Dockerfile  buf.gen.yaml  bun.lockb  nuxt.config.ts  package.json
frontend/app/: app.vue
protos/: helloworld.proto
